feat: implement DiscoverMatches page and improve profile connection UX
- Added DiscoverMatches page to showcase musically compatible users
- Created MatchCard and MatchScoreIndicator components
- Integrated real-time connection status (connect, pending, accepted, blocked)
- Added chat bubble with top-right positioning and contextual connect button
- Improved layout and positioning of Match badge (bottom-left)
- Updated EditProfile and EditProfileGroup to align with new profile structure
- Refactored media and role editors for better UX
- Added LoadingBadge UI component
- Enhanced various social components (chat header, comments, ads, posts)
- Synced English and Spanish translations across updated features
- Created backend-functions.md and backend-triggers.md documentation files

--- a/src/locales/en/ads.json
+++ b/src/locales/en/ads.json
@@ -1,7 +1,7 @@
 {
   "profileAds": {
     "title": "Musician Ads",
-    "empty": "There is no ads",
+    "empty": "There is no ads",    
     "buttons": {
       "loading": "Loading...",
       "loadMore": "Load more"
@@ -9,6 +9,11 @@
   },
   "adsPage": {
     "title": "Musician Ads",
+    "nav": {
+      "all": "All",
+      "looking": "Looking",
+      "offering": "Offering"
+    },
     "buttons": {
       "createAd": "Create Ad"
     }
