--- a/src/locales/es/common.json
+++ b/src/locales/es/common.json
@@ -17,6 +17,7 @@
   },
   "loading": "Cargando...",
   "loadMore": "Cargar más",
+  "calculating": "Calculando...",
   "generic": {
     "add": "Agregar",
     "added": "Agregado",
