feat(group): replace separate Create/Edit components with unified GroupForm
* Added **src/components/profiles/group/GroupForm.jsx** – one form handles both creation
  and edition of profile-groups, preserving avatar upload + “add genre” chip logic.
* Removed legacy `CreateProfileGroup.jsx` & `EditProfileGroup.jsx`.
* Refactored GroupHeader, GroupItem, GroupMembers, ManageMembersModal, UserGroups and
  ProfileGroup page to consume `GroupForm`.
* Updated **AppRouter** routes to use the new component.

* Re-designed footer lower bar:
  * three equal columns (copyright + terms | socials | language switch + timezone).
  * dynamically shows user timezone via `Intl.DateTimeFormat`.
* Site-map in the upper grid.

* Added `footer.timeZone` key (EN/ES) and updated `profileGroup.json`.
* Updated en/es `ui.json` with footer map & timezone strings.

* Removed obsolete imports in Edit.jsx & Explore.jsx.
* Adjusted component paths after file removals.

--- a/src/locales/en/profileGroup.json
+++ b/src/locales/en/profileGroup.json
@@ -99,63 +99,40 @@
     "viewGroup": "View Group"
   },
 
-  "createProfileGroup": {    
-    "title": "Create a Profile Group",
+  "form": {    
+    "titles": {
+      "create": "Create a Profile Group",
+      "edit": "Edit Group"
+    },
     "labels": {
       "name": "Group Name",
       "bio": "Bio",
       "country": "Country",
       "city": "City",
-      "genre": "Genre"
+      "genres": "Genres"
     },
     "placeholders": {
       "name": "Enter group name",
       "bio": "Enter a short bio",
       "country": "Enter country",
       "city": "Enter city",
-      "genre": "Enter genre"
+      "genres": "Enter genres"
     },
     "validations": {
       "name": "Group name is required"
     },
     "errors": {
-      "create": "Failed to create the group"
+      "create": "Failed to create the group",
+      "loading": "Error loading group data"
     },
     "buttons": {
       "create": "Create Group",
       "creating": "Creating...",
-      "cancel": "Cancel"
-    }
-  },
-
-  "editProfileGroup": {
-    "title": "Edit Group",
-    "labels": {
-      "bio": "Group Bio",
-      "country": "Country",
-      "city": "City",
-      "genre": "Genre",
-      "name": "Name"
-    },
-    "placeholders": {
-      "bio": "Bio",
-      "country": "Country",
-      "city": "City",
-      "genre": "Genre",
-      "name": "Name"
-    },
-    "validations": {
-      "name": "Name is required"
-    },
-    "buttons": {
+      "cancel": "Cancel",
       "saving": "Saving...",
       "save": "Save"
-    },
-    "errors": {
-      "loading": "Error loading group data"
     }
   },
-
   "errors": {
     "loading": "Error loading group data.",
     "noData": "No group data available."
