feat(settings, branding): introduce Settings module & final TuneBridge logo
Settings overhaul (WIP)
• Added Settings route (`/settings`) with sidebar navigation
  – Account, Privacy, Notifications, Provider, Music sub‑pages
• Created SettingsContext + actions; added “preferences” tables in DB
• Refactored profile/music edit screens → *Settings variants
• Removed obsolete SidebarContext

Rebranding
• Replaced provisional logo with final TuneBridge assets (SVG/PNG)
• Integrated animated logo in Navbar via lottie‑react
• Added `lottie-react` dependency

Theming groundwork
• Added `light.css` and context plumbing for theme switch
  (visual styles still pending)

UI / component updates
• New `<Toggle>` component
• Tweaks to Button, Input, Select, Navbar, Banner, Logo, HamburguerMenu

i18n
• Added `settings.json` (EN/ES) and updated auth/posts/profile strings

Docs & config
• Updated backend function/trigger docs and DB config
• Tailwind & Vite configs adjusted for new assets

BREAKING CHANGE:
– Components renamed (`*Edit*.jsx` → `*Settings.jsx`); SidebarContext removed.
  Import paths must be updated accordingly.

--- a/src/locales/en/auth.json
+++ b/src/locales/en/auth.json
@@ -11,7 +11,8 @@
       "authError": "Unable to log in. Please check your credentials.",
       "emailRequired": "Email is required",
       "passwordRequired": "Password is required"
-    }
+    },
+    "forgot": "Forgot password?"
   },
   "signup": {
     "title": "Sign Up",
@@ -42,5 +43,36 @@
     "message": "A confirmation email has been sent to your email address. Please check your inbox and follow the instructions to activate your account.",
     "note": "If you don't see it, check your spam folder.",
     "goHome": "Go to Home"
+  },
+  "forgotPassword": {
+    "title": "Reset your password",
+    "success": "Check your inbox for a reset link.",
+    "email": {
+      "label": "Email",
+      "placeholder": "you@example.com"
+    },
+    "button": {
+      "default": "Send reset link",
+      "loading": "Sending…"
+    },
+    "errors": {
+      "emailRequired": "Email is required",
+      "emailInvalid": "Enter a valid email"
+    }
+  },
+  "resetPassword": {
+    "title": "Choose a new password",
+    "password": {
+      "label": "New password",
+      "placeholder": "••••••"
+    },
+    "button": {
+      "default": "Update password",
+      "loading": "Updating…"
+    },
+    "errors": {
+      "passwordRequired": "Password is required",
+      "passwordMin": "Must be at least 6 characters"
+    }
   }
 }
