--- a/src/locales/es/auth.json
+++ b/src/locales/es/auth.json
@@ -11,7 +11,8 @@
       "authError": "No se pudo iniciar sesión. Verificá tus credenciales.",
       "emailRequired": "El correo electrónico es obligatorio",
       "passwordRequired": "La contraseña es obligatoria"
-    }
+    },
+    "forgot": "¿Has olvidado tu contraseña?"
   },
   "signup": {
     "title": "Crear cuenta",
@@ -42,5 +43,36 @@
     "message": "Te enviamos un correo de confirmación. Revisá tu bandeja de entrada y seguí las instrucciones para activar tu cuenta.",
     "note": "Si no lo encontrás, revisá la carpeta de spam.",
     "goHome": "Ir al inicio"
+  },
+  "forgotPassword": {
+    "title": "Restablece tu contraseña",
+    "success": "Revisa tu bandeja de entrada para el enlace de restablecimiento.",
+    "email": {
+      "label": "Correo electrónico",
+      "placeholder": "tu@ejemplo.com"
+    },
+    "button": {
+      "default": "Enviar enlace",
+      "loading": "Enviando…"
+    },
+    "errors": {
+      "emailRequired": "El correo electrónico es obligatorio",
+      "emailInvalid": "Introduce un correo electrónico válido"
+    }
+  },
+  "resetPassword": {
+    "title": "Elige una nueva contraseña",
+    "password": {
+      "label": "Nueva contraseña",
+      "placeholder": "••••••"
+    },
+    "button": {
+      "default": "Actualizar",
+      "loading": "Actualizando…"
+    },
+    "errors": {
+      "passwordRequired": "La contraseña es obligatoria",
+      "passwordMin": "Debe tener al menos 6 caracteres"
+    }
   }
 }
