--- a/src/locales/es/profile.json
+++ b/src/locales/es/profile.json
@@ -5,6 +5,7 @@
       "userGroupsComing": "Los Grupos de Usuarios están en desarrollo. ¡Próximamente!",
       "musicComing": "La sección de Música está en desarrollo. ¡Próximamente!",
       "noNotifications": "No hay notificaciones",
+      "lastSeen": "Última vez visto {{time}}",
       "navigation": {
         "about": "Acerca de",
         "ads": "Anuncios",
