new search filter added to the music ads section

--- a/src/locales/en/ads.json
+++ b/src/locales/en/ads.json
@@ -14,6 +14,9 @@
       "looking": "Looking",
       "offering": "Offering"
     },
+    "filters": {
+      "placeholder": "Search ads..."
+    },
     "buttons": {
       "createAd": "Create Ad"
     }
