--- a/src/locales/es/ads.json
+++ b/src/locales/es/ads.json
@@ -14,6 +14,9 @@
       "looking": "Se busca",
       "offering": "Se ofrece"
     },
+    "filters": {
+      "placeholder": "Buscar anuncio..."
+    },
     "buttons": {
       "createAd": "Crear Anuncio"
     }
