Refactor profile form: add locality selector and convert country / state to dropdowns
- Added new <Select> for “city / locality”; values pulled from country‑state‑city data
- Replaced text inputs for “country” and “state / region” with dynamic dropdowns
- Ensures normalized data (ISO codes → names) before saving to DB
- Updated labels (“Región”, “Localidad”) and validation logic

--- a/src/locales/en/profile.json
+++ b/src/locales/en/profile.json
@@ -26,7 +26,8 @@
       "firstname": "Name",
       "lastname": "Last Name",
       "country": "Country",
-      "city": "City",
+      "state": "State",
+      "neighborhood": "City",
       "gender": "Gender",
       "age": "Age",
       "years": "years"
@@ -73,18 +74,21 @@
         "firstname": "First name",
         "lastname": "Last name",
         "country": "Country",
-        "city": "City",
+        "state": "State",
+        "neighborhood": "City",
         "username": "Username",
         "gender": "Gender",
         "birthdate": "Birthdate",
-        "bioCount": "Characters used"
+        "bioCount": "Characters used",
+        "saved": "Saved ✓"
       },
       "placeholders": {
         "bio": "Bio",
         "firstname": "First name",
         "lastname": "Last name",
         "country": "Country",
-        "city": "City",
+        "state": "State",
+        "neighborhood": "City",
         "username": "Username",
         "genderDefault": "Choose your gender",
         "genderOptions": {
