--- a/src/locales/en/settings.json
+++ b/src/locales/en/settings.json
@@ -7,7 +7,7 @@
     "buttons": {
       "saving": "Saving…",
       "save": "Save",
-      "saved": "Saved!",
+      "saved": "Saved ✓",
       "change": "Change password",
       "changed": "Password updated!",
       "delete": "Delete my account"
