--- a/src/locales/es/settings.json
+++ b/src/locales/es/settings.json
@@ -7,7 +7,7 @@
     "buttons": {
       "saving": "Guardando…",
       "save": "Guardar",
-      "saved": "¡Guardado!",
+      "saved": "Guardado ✓",
       "change": "Cambiar contraseña",
       "changed": "¡Contraseña actualizada!",
       "delete": "Eliminar mi cuenta"
