--- a/src/locales/es/profile.json
+++ b/src/locales/es/profile.json
@@ -26,7 +26,8 @@
         "firstname": "Nombre",
         "lastname": "Apellido",
         "country": "País",
-        "city": "Ciudad",
+        "state": "Región",
+        "neighborhood": "Localidad",
         "gender": "Género",
         "age": "Edad",
         "years": "años"
@@ -73,18 +74,21 @@
         "firstname": "Nombre",
         "lastname": "Apellido",
         "country": "País",
-        "city": "Ciudad",
+        "state": "Región",
+        "neighborhood": "Localidad",
         "username": "Usuario",
         "gender": "Género",
         "birthdate": "Fecha de Nacimiento",
-        "bioCount": "Caracteres utilizados"
+        "bioCount": "Caracteres utilizados",
+        "saved": "Guardado ✓"
       },
       "placeholders": {
         "bio": "Bio",
         "firstname": "Nombre",
         "lastname": "Apellido",
         "country": "País",
-        "city": "Ciudad",
+        "state": "Región",
+        "neighborhood": "Localidad",
         "username": "Usuario",
         "genderDefault": "Elige tu género",
         "genderOptions": {
