refactor(routing): replace ViewContext view‑switching with nested React Router routes
BREAKING CHANGES
- ViewContext has been removed; all internal‑view handling is now done with
  React Router nested routes.

Features
- Profile
  • `/profile/:id` now hosts nested routes: `"" (about)`, `posts`, `create`,
    `groups`, `ads`, `match`.
  • ProfileHeader persists while nested content swaps via `<Outlet>`.
- Notifications
  • Nested routes: `"" (all)` and `pending`.
  • NavLink tabs use `relative="route"` to prevent path duplication.
- Explore
  • Nested routes: `posts` and `profiles`, eliminating manual state logic.

Cleanup
- Deleted ViewContext and its provider.
- Removed all `manageView`, `externalView`, `internalView` props / hooks.

--- a/src/locales/en/profileGroup.json
+++ b/src/locales/en/profileGroup.json
@@ -4,7 +4,8 @@
     "groups": "Groups",
     "createNewGroup": "Create New Group",
     "notInAnyGroups": "You are not part of any groups yet.",
-    "userNotInAnyGroups": "This user is not part of any groups yet."
+    "userNotInAnyGroups": "This user is not part of any groups yet.",
+    "userGroupsComing": "User Groups is in development. Coming soon!"
   },
 
   "manageMembers": {
