feat(db+frontend): optimize RLS, indexes, and DM logic for performance
- **RLS optimization**
  - Replaced `auth.uid()` / `current_setting()` with `(select auth.uid())` to avoid per-row evaluation.
  - Merged redundant permissive policies:
    · `social.conversation_participants` (delete & update)
    · `social.conversations` (delete, insert, select, update)
    · `users.profiles`, `users.privacy_settings`, `users.ui_preferences`, etc.
  - Removed global SELECT policy from `users.privacy_settings`; now owner-only access.
  - Added granular `p_read_dm_pref` policy to expose only `prefs.allow_messages` field to others.

- **Indexes**
  - Added covering indexes for missing foreign keys (`*_profile_id`, `*_role_id`, `*_conversation_id`, etc.).
  - Created specific helper indexes (`idx_messages_conversation_id`, etc.).
  - Marked unused/legacy indexes for cleanup.

- **Added unified `useCanSendDM` hook**
  Encapsulates logic to check if a user can send DMs to another, based on privacy prefs and connection status.
- Fixed `privacyKeyFactory` to correctly scope queries by `profileId` to prevent cache collisions.
- **ProfileData.jsx**
  Updated layout: email now spans full width and is centered (`col-span-full sm:col-span-2 justify-center`).

These changes reduce redundant queries, improve performance across messaging and settings, and clarify UI behavior.

--- a/src/locales/en/profile.json
+++ b/src/locales/en/profile.json
@@ -23,6 +23,7 @@
     "data": {
       "firstname": "Name",
       "lastname": "Last Name",
+      "email": "Email",
       "country": "Country",
       "state": "State",
       "neighborhood": "City",
