--- a/src/locales/en/settings.json
+++ b/src/locales/en/settings.json
@@ -55,7 +55,7 @@
     "buttons": {
       "saving": "Saving…",
       "save": "Save",
-      "saved": "Saved!"
+      "saved": "Saved ✓"
     }
   },
   "notifications": {
