--- a/src/locales/es/profile.json
+++ b/src/locales/es/profile.json
@@ -22,6 +22,7 @@
       },
       "data": {
         "firstname": "Nombre",
+        "email": "Email",
         "lastname": "Apellido",
         "country": "País",
         "state": "Región",
